# BarnabeeNet

./: .cursorrules  .env.example  .gitignore  .sops.yaml  BARNABEENET_V1_COMPLETE_HANDOFF.md  BARNABEENET_V1_COMPLETE_SNAPSHOT.md  BarnabeeNet_Memory_System_Enhancements.md  CLAUDE.md  CONTEXT.md  MORNING_NOTES.md  Makefile  PATCH_Phase1_Updates.md  PROJECT_STATUS_REVIEW.md  README.md  TEST_RESULTS.md  barnabeenet-project-log-updated.md  barnabeenet-project-log.md  claude-project-rules.md  ha_entities_snapshot_20260123_132742.json  ha_test_snapshot.json  intent_test_report.json  pyproject.toml  requirements-gpu.txt  requirements.txt  test_all_intents.sh  test_all_voices.py  test_barnabee_voice.py  test_names.py  test_names_pronunciation.py  test_performance_features.py  test_performance_features.sh  test_timer_actions.sh  test_timers.sh  test_viola_v2.py
.copilot/sessions/: session-2026-01-18-gpu-worker-results.md  session-2026-01-18-gpu-worker.md  test-001-results.md  test-001-validation.md  test-002-comprehension.md  (+1 more)
.github/: AGENTS.md  DEVELOPMENT.md  copilot-instructions.md
.venv-gpu/: pyvenv.cfg
Planning/: 00-v2-summary.md  01-core-data-layer.md  02-voice-pipeline.md  03-intent-classification.md  04-home-assistant.md  05-memory-system.md  06-response-generation.md  07-meeting-scribe.md  08-self-improvement.md  09-dashboard.md  10-testing-observability.md  11-deployment-infrastructure.md  12-calendar-email.md  13-notifications.md  14-multi-device.md  15-api-contracts.md  16-migration-runbook.md  17-security.md  18-cost-tracking.md  19-personal-finance.md  20-native-apps.md  21-user-profiles.md  22-extended-features.md  23-implementation-additions.md  24-agent-implementation-guide.md  25-agent-guide-addendum.md  START-HERE.md
config/: llm-free.yaml  llm.yaml  overrides.yaml  patterns.yaml  routing.yaml
docs/: BarnabeeGlass_Technical_Specification.md  BarnabeeNet_Dashboard_Signal_Architecture.md  BarnabeeNet_Family_Profile_System.md  BarnabeeNet_Features_UseCases.md  BarnabeeNet_Hardware_Specifications.md  BarnabeeNet_Implementation_Guide.md  BarnabeeNet_Implementation_Guide_Prompt_Addendum.md  BarnabeeNet_Operations_Runbook.md  BarnabeeNet_Performance_Improvements.md  BarnabeeNet_Pipeline_Management_Dashboard.md  BarnabeeNet_README_v3.1.md  BarnabeeNet_README_v3.2.md  BarnabeeNet_Technical_Architecture.md  BarnabeeNet_Theory_Research.md  BarnabeeNet_Theory_Research_SkyrimNet_Expansion.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  INTENT_CLASSIFICATION_ISSUES.md  QUICK_REFERENCE.md  STREAMING_LLM_RESPONSES.md  Self_Improvement_Agent_Review.md  Self_Improvement_Prompt_Assessment.md  TIMER_SETUP.md  VIEWASSIST_INTEGRATION.md  VM_DEPLOYMENT_STATUS.md  architecture.md  extendedconversationreview.md  llm-api-providers-reference.md  project-log.md
ha-integration/: README.md
infrastructure/: README.md  podman-compose.yml  prometheus.yml
scripts/: README.md  clear_redis_data.py  debug-logs.sh  deploy-vm.sh  ollama-tunnel.sh  pre-commit.sh  restart.sh  start-gpu-worker.sh  status.sh  switch-llm-config.sh  validate.sh
services/: README.md
tests/: test_action_agent.py  test_config.py  test_dashboard_contract.py  test_distil_whisper.py  test_e2e.py  test_graceful_fallback.py  test_homeassistant.py  test_homeassistant_api.py  test_interaction_agent.py  test_memory_agent.py  test_meta_agent.py  test_metrics.py  test_orchestrator.py  test_pronunciation.py  test_stt_modes.py  test_voice_pipeline_orchestrator.py  test_websocket.py
v1/: .env.example  BARNABEENET_V1_COMPLETE_HANDOFF.md  CLAUDE.md  Makefile  TEST_RESULTS.md  V1_SNAPSHOT_README.md  barnabeenet-project-log.md  requirements.txt  test_all_intents.py  test_performance_features.py
workers/: gpu_stt_worker.py
(+204 files in other folders)
