[project]
name = "barnabeenet"
version = "0.1.0"
description = "Privacy-first, multi-agent AI smart home assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Thom Fife" }
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
    "httpx>=0.27",
    "anyio>=4.0",
    
    # API Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    
    # LLM
    "litellm>=1.50",
    
    # Database
    "aiosqlite>=0.20",
    "redis>=5.0",
    
    # Observability
    "structlog>=24.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "pyannote-audio>=3.3",
    "piper-tts>=1.2",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["barnabeenet"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
