[project]
name = "barnabeenet"
version = "0.1.0"
description = "Privacy-first, multi-agent AI smart home assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Thom Fife", email = "thom.fife@gmail.com" }
]

dependencies = [
    # Core framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async support
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",

    # Audio processing
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "webrtcvad>=2.0.10",

    # STT - Distil-Whisper (CPU path)
    "faster-whisper>=1.0.0",

    # TTS - Kokoro
    "kokoro>=0.3.0",

    # Data/State
    "redis>=5.0.0",
    "aiosqlite>=0.19.0",

    # Security
    "cryptography>=41.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

gpu = [
    # Parakeet TDT for GPU worker (installed separately on Man-of-war)
    "nemo-toolkit[asr]>=1.22.0",
    "torch>=2.1.0",
]

[project.scripts]
barnabeenet = "barnabeenet.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barnabeenet"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["barnabeenet"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
